Fix typo, of course fix typo

--- a/lang/es.json
+++ b/lang/es.json
@@ -57,7 +57,7 @@
       },
       "rails": {
         "alt": "Rails",
-        "description": "Salvo que lso requisitos del proyecto sugieran que no es la mejor opción, para nuevos proyectos acabaré usando Ruby on Rails. Es una gran tecnología que facilita las iteraciones rápidas. Así, puedo trabajar de una manera más iterativa para entregar más rápido y mostrar progreso, algo que hará fácil evolucionar la aplicación si hace falta cambiar algo.",
+        "description": "Salvo que los requisitos del proyecto sugieran que no es la mejor opción, para nuevos proyectos acabaré usando Ruby on Rails. Es una gran tecnología que facilita las iteraciones rápidas. Así, puedo trabajar de una manera más iterativa para entregar más rápido y mostrar progreso, algo que hará fácil evolucionar la aplicación si hace falta cambiar algo.",
         "title": "Ruby on Rails, mi solución favorita"
       },
       "title": "Mis herramientas favoritas"
